kubernetes/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-api
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 1500
      targetPort: 1500
