kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.localdev.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dummy-api
            port:
              number: 105
